Bug 409565. "ASSERTION: unexpected frame type" with -moz-column, float, svg. r=bz@bzarsky@mit.edu, sr=roc@ocallahan.org, b1.9=mtschrep@gmail.com